--- a/package.json
+++ b/package.json
@@ -21,7 +21,10 @@
     "@angular/platform-server": "^17.2.0",
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
+    "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "chart.js": "^4.4.4",
     "express": "^4.18.2",
+    "leaflet": "^1.9.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.10",
@@ -36,6 +39,7 @@
     "@angular/compiler-cli": "^17.2.0",
     "@types/express": "^4.17.17",
     "@types/jasmine": "~5.1.0",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^18.18.0",
     "@types/validator": "^13.12.2",
     "jasmine-core": "~5.1.0",
