--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@asymmetrik/ngx-leaflet": "^17.0.0",
     "chart.js": "^4.4.4",
     "express": "^4.18.2",
+    "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
