--- a/package.json
+++ b/package.json
@@ -23,10 +23,12 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "apexcharts": "^3.54.1",
     "chart.js": "^4.4.4",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "ng-apexcharts": "^1.12.0",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
