--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "ng-apexcharts": "^1.12.0",
+    "pdfmake": "^0.2.15",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
     "primeng": "^17.18.11",
@@ -45,6 +46,7 @@
     "@types/jasmine": "~5.1.0",
     "@types/leaflet": "^1.9.12",
     "@types/node": "^18.18.0",
+    "@types/pdfmake": "^0.2.9",
     "@types/validator": "^13.12.2",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
