--- a/package.json
+++ b/package.json
@@ -23,11 +23,16 @@
     "@angular/router": "^17.2.0",
     "@angular/ssr": "^17.2.3",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
+    "@asymmetrik/ngx-leaflet-markercluster": "^17.0.0",
+    "@bluehalo/ngx-leaflet": "^19.0.0",
+    "@bluehalo/ngx-leaflet-markercluster": "^19.0.0",
+    "@types/leaflet.markercluster": "^1.5.5",
     "apexcharts": "^3.54.1",
     "chart.js": "^4.4.4",
     "express": "^4.18.2",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet.markercluster": "^1.5.3",
     "ng-apexcharts": "^1.12.0",
     "pdfmake": "^0.2.15",
     "primeflex": "^3.3.1",
