--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss","node_modules/leaflet.markercluster/dist/MarkerCluster.css",
+  "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css"
             ],
             "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"],
             "server": "src/main.server.ts",
@@ -99,7 +100,8 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss","node_modules/leaflet.markercluster/dist/MarkerCluster.css",
+  "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css"
             ],
             "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
           }
