--- a/angular.json
+++ b/angular.json
@@ -30,8 +30,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss","node_modules/leaflet.markercluster/dist/MarkerCluster.css",
-  "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css"
+              "src/styles.scss"
             ],
             "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"],
             "server": "src/main.server.ts",
@@ -100,8 +99,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss","node_modules/leaflet.markercluster/dist/MarkerCluster.css",
-  "node_modules/leaflet.markercluster/dist/MarkerCluster.Default.css"
+              "src/styles.scss"
             ],
             "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js"]
           }
