--- a/package.json
+++ b/package.json
@@ -30,7 +30,9 @@
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
+    "lottie-web": "^5.12.2",
     "ng-apexcharts": "^1.12.0",
+    "ngx-lottie": "^12.0.0",
     "pdfmake": "^0.2.15",
     "primeflex": "^3.3.1",
     "primeicons": "^7.0.0",
