--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
     "@angular/ssr": "^17.2.3",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@asymmetrik/ngx-leaflet-markercluster": "^17.0.0",
+    "@types/file-saver": "^2.0.7",
     "apexcharts": "^3.54.1",
     "chart.js": "^4.4.4",
     "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
     "leaflet.markercluster": "^1.5.3",
@@ -40,6 +42,7 @@
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "validator": "^13.12.0",
+    "xlsx": "^0.18.5",
     "zone.js": "~0.14.3"
   },
   "devDependencies": {
