--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@angular/ssr": "^17.2.3",
     "@asymmetrik/ngx-leaflet": "^17.0.0",
     "@asymmetrik/ngx-leaflet-markercluster": "^17.0.0",
+    "@turf/turf": "^7.1.0",
     "@types/file-saver": "^2.0.7",
     "apexcharts": "^3.54.1",
     "chart.js": "^4.4.4",
@@ -31,6 +32,9 @@
     "file-saver": "^2.0.5",
     "jwt-decode": "^4.0.0",
     "leaflet": "^1.9.4",
+    "leaflet-polylinedecorator": "^1.6.0",
+    "leaflet-rotatedmarker": "^0.2.0",
+    "leaflet-trackplayer": "^2.0.2",
     "leaflet.markercluster": "^1.5.3",
     "lottie-web": "^5.12.2",
     "ng-apexcharts": "^1.12.0",
