--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@asymmetrik/ngx-leaflet-markercluster": "^17.0.0",
     "@turf/turf": "^7.1.0",
     "@types/file-saver": "^2.0.7",
+    "angular-gridster2": "^19.0.0",
     "apexcharts": "^3.54.1",
     "chart.js": "^4.4.4",
     "express": "^4.18.2",
