--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "leaflet": "^1.9.4",
     "leaflet-polylinedecorator": "^1.6.0",
     "leaflet-rotatedmarker": "^0.2.0",
+    "leaflet-routing-machine": "^3.2.12",
     "leaflet-trackplayer": "^2.0.2",
     "leaflet.markercluster": "^1.5.3",
     "lottie-web": "^5.12.2",
