mainenance firebase setrup and configured

--- a/firebase.json
+++ b/firebase.json
@@ -1,6 +1,6 @@
 {
   "hosting": {
-    "public": "dist/vahan/browser",
+    "public": "dist/grl/browser",
     "ignore": [
       "firebase.json",
       "**/.*",
