--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@angular/compiler": "^17.2.0",
     "@angular/core": "^17.2.0",
     "@angular/forms": "^17.2.0",
+    "@angular/google-maps": "^19.2.15",
     "@angular/platform-browser": "^17.2.0",
     "@angular/platform-browser-dynamic": "^17.2.0",
     "@angular/platform-server": "^17.2.0",
@@ -26,6 +27,7 @@
     "@asymmetrik/ngx-leaflet-markercluster": "^17.0.0",
     "@turf/turf": "^7.1.0",
     "@types/file-saver": "^2.0.7",
+    "@types/google.maps": "^3.58.1",
     "angular-gridster2": "^19.0.0",
     "apexcharts": "^3.54.1",
     "chart.js": "^4.4.4",
