--- a/angular.json
+++ b/angular.json
@@ -32,7 +32,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js", "node_modules/leaflet/dist/leaflet.js","node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"],
+            "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js", "node_modules/leaflet/dist/leaflet.js", "node_modules/leaflet-draw/dist/leaflet.draw.js","node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"],
             "server": "src/main.server.ts",
             "prerender": false,
             "ssr": false
@@ -101,7 +101,7 @@
             "styles": [
               "src/styles.scss"
             ],
-            "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js", "node_modules/leaflet/dist/leaflet.js","node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"]
+            "scripts": ["node_modules/apexcharts/dist/apexcharts.min.js", "node_modules/leaflet/dist/leaflet.js", "node_modules/leaflet-draw/dist/leaflet.draw.js","node_modules/leaflet-trackplayer/dist/leaflet-trackplayer.umd.cjs"]
           }
         }
       }
