--- a/firebase.json
+++ b/firebase.json
@@ -11,7 +11,7 @@
           },
           {
             "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' 'unsafe-inline'; connect-src 'self'; img-src 'self' data: https:; style-src 'self' 'unsafe-inline'; font-src 'self' data:; frame-ancestors 'none';"
+            "value": "default-src 'self'; script-src 'self' 'unsafe-inline'; connect-src 'self' https://vs.livetrack24.in; img-src 'self' data: https:; style-src 'self' 'unsafe-inline'; font-src 'self' data: https://fonts.googleapis.com https://fonts.gstatic.com; frame-ancestors 'none';"
           }
         ]
       },
